--- a/Projet/assets/css/style.css
+++ b/Projet/assets/css/style.css
@@ -552,9 +552,13 @@ section {
 # Mes compétences
 --------------------------------------------------------------*/
 
-.competences table{
+.competences table {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.competences td {
+	width: 20%;
 }
 
 .competences .skills-content {
